Angular display video form component init

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
     <title>Angular 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="assets/js/es6-shim.min.js"></script>
@@ -31,6 +31,6 @@
 
   <!-- 3. Display the application -->
   <body>
-    <app-begin>Loading...</app-begin>
+    <app-begin></app-begin>
   </body>
 </html>
