Angular component done, there is a bug on server side, socket.io implemented

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <script src="assets/js/system.src.js"></script>
     <script src="assets/js/Rx.js"></script>
     <script src="assets/js/angular2.dev.js"></script>
+    <script src="assets/js/socket.io.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
