--- a/client/index.html
+++ b/client/index.html
@@ -7,25 +7,14 @@
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="assets/js/es6-shim.min.js"></script>
-    <script src="assets/js/system-polyfills.js"></script>
-    <script src="assets/js/shims_for_IE.js"></script>
-    <script src="assets/js/angular2-polyfills.js"></script>
+    <script src="assets/js/zone.js"></script>
+    <script src="assets/js/Reflect.js"></script>
     <script src="assets/js/system.src.js"></script>
-    <script src="assets/js/Rx.js"></script>
-    <script src="assets/js/angular2.dev.js"></script>
     <script src="assets/js/socket.io.js"></script>
     <!-- 2. Configure SystemJS -->
+    <script src="assets/js/systemjs.config.js"></script>
     <script>
-    System.config({
-    packages: {
-    app: {
-    format: 'register',
-    defaultExtension: 'js'
-    }
-    }
-    });
-    System.import('app/main')
-    .then(null, console.error.bind(console));
+     System.import('app').catch(function(err){ console.error(err);  });
     </script>
   </head>
   <!-- 3. Display the application -->
