Making document body a dropzone

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
   <body id="dom_body">
   <app-begin></app-begin>
 </body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
   document.getElementById('dom_body').addEventListener('dragover', function(e){
       e.preventDefault();
   });
@@ -31,5 +31,5 @@
   document.getElementById('dom_body').addEventListener('drop', function(e){
       e.preventDefault();
   });
-</script>
+</script>-->
 </html>
